smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/annotation-invalid-object-key3.smithy
// Syntax error at line 3, column 17: Expected one of IDENTIFIER, STRING('"'); but found LBRACE('{') | Model
namespace com.foo
@foo(foo: true, {}: true)
string MyString
